Creación y codificación de clases vacías esqueleto.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-<meta charset="ISO-8859-1">
-
-<meta http-equiv="refresh">
-
-<title>Redireccionando...</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=GestionarPersonaController">
+    <title>Redireccionando...</title>
 </head>
 <body>
-
+    
 </body>
 </html>
